<resources>
    <string name="app_name">Hau Hau</string>
    <string name="click_and_choose_your_records">Click and choose your records</string>
    <string name="intent_application_recorded_file">application/pdf</string>
    <string name="your_dog_likes_it">Your dog likes it ;)</string>
    <string name="preparing">Preparing...</string>
    <string name="dB"> dB</string>
    <string name="listening_stopped">Listening stopped...</string>
    <string name="press_record_icon_to_save_your_voice">Press record icon to save your voice</string>
    <string name="record_new_file">Record new file</string>
    <string name="delete_files">Delete all recorded files</string>
    <string name="sample_added">Sample record added</string>
    <string name="add_records">You need to add your records first</string>
    <string name="click_to_listen_your_dog">Click to listen your dog</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="if_sound_will_be_to_loud_app_will_react_by_playing_your_records_randomly">If sound will be to loud app will react by playing your records randomly.</string>
    <string name="listening">Listening...</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="stop_and_go_back">Stop and go back</string>
    <string name="you_can_block_your_phone_now_and_app_will_still_works_at_background">You can block your phone and app will still works at background.</string>
    <string name="files_deleted">Files deleted</string>
</resources>
