<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="obj"
            type="com.example.my_pc.hauhau.ui.listen.ListenViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/tv_listen_info_1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/my_dialog_white"
            android:padding="10dp"
            android:text="@string/if_sound_will_be_to_loud_app_will_react_by_playing_your_records_randomly"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_listen_info_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_listen_info_2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/my_dialog_white"
            android:padding="10dp"
            android:text="@string/you_can_block_your_phone_now_and_app_will_still_works_at_background"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_sound_level"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_sound_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/preparing"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_listening"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/listening"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sound_level" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:onClick="@{() -> obj.onXClick()}"
            android:padding="10dp"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toTopOf="@+id/tv_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/stop_and_go_back"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>